--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -1,5 +1,13 @@
 * {
-    width: 0;
-    height: 0;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+ul {
     list-style-type: none;
 }
