--- a/src/views/login.html
+++ b/src/views/login.html
@@ -29,15 +29,15 @@
                         <div class="login-right-wrap">
                             <h1>Login</h1>
                             <p class="account-subtitle">Admin panelga kirish</p>
-                            <form class="form" action="index.html">
+                            <form id="form" class="form" action="index.html">
                                 <div class="form-group">
                                     <label class="form-control-label">Login</label>
-                                    <input id="input-login" type="text" class="form-control">
+                                    <input id="inputLogin" type="text" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label class="form-control-label">Parol</label>
                                     <div class="pass-group">
-                                        <input id="input-password" type="password" class="form-control pass-input">
+                                        <input id="inputPassword" type="password" class="form-control pass-input">
                                         <span class="fas fa-eye toggle-password"></span>
                                     </div>
                                 </div>
@@ -50,7 +50,6 @@
         </div>
     </div>
     
-    
     <script src="assets/js/jquery-3.6.0.min.js"></script>
     
     <script src="assets/js/bootstrap.bundle.min.js"></script>
@@ -62,5 +61,7 @@
 
     <script type="module" src="utils/alert.js"></script>
     <script type="module" src="js/index.js"></script>
+
+
 </body>
 </html>
