--- a/src/views/branches.html
+++ b/src/views/branches.html
@@ -41,7 +41,7 @@
         <div class="header header-one">
             
             <div class="header-left header-left-one">
-                <a href="index.html" class="logo">
+                <!-- <a href="index.html" class="logo">
                     <img src="assets/img/logo.png" alt="Logo">
                 </a>
                 <a href="index.html" class="white-logo">
@@ -49,7 +49,7 @@
                 </a>
                 <a href="index.html" class="logo logo-small">
                     <img src="assets/img/logo-small.png" alt="Logo" width="30" height="30">
-                </a>
+                </a> -->
             </div>
             
             
@@ -72,112 +72,6 @@
             
             
             <ul class="nav nav-tabs user-menu">
-                
-                <li class="nav-item dropdown has-arrow flag-nav">
-                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button">
-                        <img src="assets/img/flags/us.png" alt="" height="20"> <span>English</span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right">
-                        <a href="javascript:void(0);" class="dropdown-item">
-                            <img src="assets/img/flags/us.png" alt="" height="16"> English
-                        </a>
-                        <a href="javascript:void(0);" class="dropdown-item">
-                            <img src="assets/img/flags/fr.png" alt="" height="16"> French
-                        </a>
-                        <a href="javascript:void(0);" class="dropdown-item">
-                            <img src="assets/img/flags/es.png" alt="" height="16"> Spanish
-                        </a>
-                        <a href="javascript:void(0);" class="dropdown-item">
-                            <img src="assets/img/flags/de.png" alt="" height="16"> German
-                        </a>
-                    </div>
-                </li>
-                
-                
-                <li class="nav-item dropdown">
-                    <a href="#" class="dropdown-toggle nav-link" data-bs-toggle="dropdown">
-                        <i data-feather="bell"></i> <span class="badge rounded-pill">5</span>
-                    </a>
-                    <div class="dropdown-menu notifications">
-                        <div class="topnav-dropdown-header">
-                            <span class="notification-title">Notifications</span>
-                            <a href="javascript:void(0)" class="clear-noti"> Clear All</a>
-                        </div>
-                        <div class="noti-content">
-                            <ul class="notification-list">
-                                <li class="notification-message">
-                                    <a href="activities.html">
-                                        <div class="media d-flex">
-                                            <span class="avatar avatar-sm">
-                                                <img class="avatar-img rounded-circle" alt="" src="assets/img/profiles/avatar-02.jpg">
-                                            </span>
-                                            <div class="media-body">
-                                                <p class="noti-details"><span class="noti-title">Brian Johnson</span> paid the invoice <span class="noti-title">#DF65485</span></p>
-                                                <p class="noti-time"><span class="notification-time">4 mins ago</span></p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="notification-message">
-                                    <a href="activities.html">
-                                        <div class="media d-flex">
-                                            <span class="avatar avatar-sm">
-                                                <img class="avatar-img rounded-circle" alt="" src="assets/img/profiles/avatar-03.jpg">
-                                            </span>
-                                            <div class="media-body">
-                                                <p class="noti-details"><span class="noti-title">Marie Canales</span> has accepted your estimate <span class="noti-title">#GTR458789</span></p>
-                                                <p class="noti-time"><span class="notification-time">6 mins ago</span></p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="notification-message">
-                                    <a href="activities.html">
-                                        <div class="media d-flex">
-                                            <div class="avatar avatar-sm">
-                                                <span class="avatar-title rounded-circle bg-primary-light"><i class="far fa-user"></i></span>
-                                            </div>
-                                            <div class="media-body">
-                                                <p class="noti-details"><span class="noti-title">New user registered</span></p>
-                                                <p class="noti-time"><span class="notification-time">8 mins ago</span></p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="notification-message">
-                                    <a href="activities.html">
-                                        <div class="media d-flex">
-                                            <span class="avatar avatar-sm">
-                                                <img class="avatar-img rounded-circle" alt="" src="assets/img/profiles/avatar-04.jpg">
-                                            </span>
-                                            <div class="media-body">
-                                                <p class="noti-details"><span class="noti-title">Barbara Moore</span> declined the invoice <span class="noti-title">#RDW026896</span></p>
-                                                <p class="noti-time"><span class="notification-time">12 mins ago</span></p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li class="notification-message">
-                                    <a href="activities.html">
-                                        <div class="media d-flex">
-                                            <div class="avatar avatar-sm">
-                                                <span class="avatar-title rounded-circle bg-info-light"><i class="far fa-comment"></i></span>
-                                            </div>
-                                            <div class="media-body">
-                                                <p class="noti-details"><span class="noti-title">You have received a new message</span></p>
-                                                <p class="noti-time"><span class="notification-time">2 days ago</span></p>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="topnav-dropdown-footer">
-                            <a href="activities.html">View all Notifications</a>
-                        </div>
-                    </div>
-                </li>
-                
                 <li class="nav-item dropdown has-arrow main-drop">
                     <a href="#" class="dropdown-toggle nav-link" data-bs-toggle="dropdown">
                         <span class="user-img">
@@ -192,7 +86,6 @@
                         <a class="dropdown-item" href="login.html"><i data-feather="log-out" class="me-1"></i> Logout</a>
                     </div>
                 </li>
-                
             </ul>
             
         </div>
@@ -273,7 +166,7 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
                                     <div class="form-group">
-                                        <label>Item Name</label>
+                                        <label>Filial nomi</label>
                                         <input type="text" class="form-control form-control-addbranch" placeholder="ps Nasiya savdo 10">
                                     </div>
                                 </div>
@@ -282,7 +175,7 @@
                     </div>
                     <div class="modal-footer">
                         <div class="bank-details-btn">
-                            <a href="javascript:void(0);" data-bs-dismiss="modal" class="btn bank-cancel-btn me-2">Cancel</a>
+                            <a href="javascript:void(0);" data-bs-dismiss="modal" class="btn bank-cancel-btn me-2">Bekor qilish</a>
                             <a href="javascript:void(0);" class="btn bank-save-btn">Saqlash</a>
                         </div>
                     </div>
