--- a/src/views/login.html
+++ b/src/views/login.html
@@ -31,8 +31,8 @@
                             <p class="account-subtitle">Admin panelga kirish</p>
                             <form id="form" class="form" action="index.html">
                                 <div class="form-group">
-                                    <label class="form-control-label">Login</label>
-                                    <input id="inputLogin" type="text" class="form-control">
+                                    <label class="form-control-label">Email</label>
+                                    <input id="inputLogin" type="email" class="form-control">
                                 </div>
                                 <div class="form-group">
                                     <label class="form-control-label">Parol</label>
