add logout api and connect to client

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -57,7 +57,7 @@
                             Profile</a>
                         <a class="dropdown-item" href="settings.html"><i data-feather="settings" class="me-1"></i>
                             Settings</a>
-                        <a class="dropdown-item" href="login.html"><i data-feather="log-out" class="me-1"></i>
+                        <a class="dropdown-item" href="/api/logout"><i data-feather="log-out" class="me-1"></i>
                             Logout</a>
                     </div>
                 </li>
@@ -88,6 +88,8 @@
     <script src="assets/plugins/apexchart/apexcharts.min.js"></script>
     <script src="assets/plugins/apexchart/chart-data.js"></script>
     <script src="assets/js/script.js"></script>
+
+    <script type="module" src="js/index.js"></script>
 </body>
 
 </html>
