--- a/src/views/branches.html
+++ b/src/views/branches.html
@@ -83,7 +83,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="profile.html"><i data-feather="user" class="me-1"></i> Profile</a>
                         <a class="dropdown-item" href="settings.html"><i data-feather="settings" class="me-1"></i> Settings</a>
-                        <a class="dropdown-item" href="login.html"><i data-feather="log-out" class="me-1"></i> Logout</a>
+                        <a class="dropdown-item" href="/api/logout"><i data-feather="log-out" class="me-1"></i> Logout</a>
                     </div>
                 </li>
             </ul>
@@ -218,6 +218,9 @@
     <script src="assets/plugins/sweetalert/sweetalerts.min.js"></script>
     
     <script src="assets/js/script.js"></script>
+
     <script src="js/branches.js"></script>
+    <script type="module" src="js/index.js"></script>
+
 </body>
 </html>
