add branch delete

--- a/src/views/branches.html
+++ b/src/views/branches.html
@@ -184,6 +184,29 @@
         </div>        
     </div>
     
+    <div class="display_none modal custom-modal fade" id="delete_paid" role="dialog">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="form-header">
+                        <h3>Filialni ochirish ?</h3>
+                        <p><span class="delete-branch-name"></span> filialini o'chirishni istaysizmi ?</p>
+                    </div>
+                    <div class="modal-btn delete-action">
+                        <div class="row">
+                            <div class="col-6">
+                                <a href="javascript:void(0);" class="btn btn-primary paid-continue-btn">O'chirish</a>
+                            </div>
+                            <div class="col-6">
+                                <a href="javascript:void(0);" data-bs-dismiss="modal" class="btn btn-primary paid-cancel-btn">Bekor qilish</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="display_none swal2-container swal2-center swal2-backdrop-show" style="overflow-y: auto;">
         <div aria-labelledby="swal2-title" aria-describedby="swal2-content" class="swal2-popup swal2-modal swal2-show" tabindex="-1" role="dialog" aria-live="assertive" aria-modal="true" style="display: flex;">
             <div class="swal2-header">
