--- a/src/views/branches.html
+++ b/src/views/branches.html
@@ -89,17 +89,19 @@
             </ul>
             
         </div>
-        
-        
+
         <div class="sidebar" id="sidebar">
             <div class="sidebar-inner slimscroll">
                 <div id="sidebar-menu" class="sidebar-menu">
                     <ul>
                         <li class="">
-                            <a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg> <span>Dashboard</span></a>
+                            <a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg> <span>Asosiy menu</span></a>
                         </li>
                         <li class="active">
-                            <a href="/branches"><i data-feather="star"></i> <span>Items</span></a>
+                            <a href="/branches"><i data-feather="star"></i> <span>Filiallar</span></a>
+                        </li>
+                        <li class="">
+                            <a href="/users"><i data-feather="star"></i> <span>Hodimlar</span></a>
                         </li>
                     </ul>
                 </div>
@@ -181,7 +183,7 @@
                     </div>
                 </div>
             </div>
-        </div>        
+        </div>
     </div>
     
     <div class="display_none modal custom-modal fade" id="delete_paid" role="dialog">
