--- a/src/views/branches.html
+++ b/src/views/branches.html
@@ -107,8 +107,7 @@
                 </div>
             </div>
         </div>
-        
-        
+            
         <div class="page-wrapper">
             <div class="content container-fluid">
                 
@@ -118,7 +117,7 @@
                             <div class="row align-items-center">
                                 <div class="col-lg-12 col-md-12">
                                     <div class="invoices-settings-btn invoices-settings-btn-one">
-                                        <a href="#" class="btn" data-bs-toggle="modal" data-bs-target="#add_items">
+                                        <a href="#" class="btn add_branch_btn" data-bs-toggle="modal" data-bs-target="#add_items">
                                             <i data-feather="plus-circle"></i> Yangi filial qo'shish
                                         </a>
                                     </div>
@@ -150,7 +149,6 @@
                 </div>
             </div>
         </div>
-        
         
         <div class="modal custom-modal fade bank-details" id="add_items" role="dialog">
             <div class="modal-dialog modal-dialog-centered modal-lg">
